# sim

./: Cargo.toml  README.md  agent.wat  bench.sh  wasm-implementors.md
benchmarks/: Cargo.toml
benchmarks/benches/: simple_agent.rs
main/: Cargo.toml
main/src/: main.rs
sim/: Cargo.toml
sim/src/: lib.rs  sim.rs  simple_agent.rs  test.rs  wasm.rs
src/: buf.rs  main.rs  sim.rs  simple_agent.rs
wasm_agent/: Cargo.toml
wasm_agent/src/: main.rs
